import "common.proto";

// ===================================================================
// 上行消息
// ===================================================================
message up_msg {
    required uint32         _sequence     = 1;  // 请求流水号
    required bool           _repeat       = 2;  // 是否是重复请求
    required uint32         _user_id      = 3;  // 角色ID(玩家ID = 角色ID div 10)
    optional login_req      _login        = 4;  // 登录
    optional role_req       _role         = 5;  // 角色
    optional magic_req      _magic        = 6;  // 魔法
    optional team_req       _team         = 7;  // 队伍
    optional match_req      _match        = 8;  // 匹配
}

// ===================================================================
// 登录请求
// ===================================================================
message login_req {
    required string   _device_id  = 1;  // 设备ID
    rquuired string   _version    = 2;  // 版本号 
}

// ===================================================================
// 角色请求
// ===================================================================
message role_req {
    optional create_role    _create  = 1;  // 创建角色
    optional select_role    _select  = 2;  // 选择角色
    optional lookup_role    _lookup  = 3;  // 查看角色
}

message create_role {
    required uint32   _role_cid = 1;  // 角色创建ID
    required string   _nickname = 2;  // 昵称 
}

message select_role {
    required uint32   _role_id = 1;  // 角色ID
}

message lookup_role {
  
}


// ===================================================================
// 魔法请求
// ===================================================================
message magic_req {
    optional select_magic   _select = 1;  // 选择魔法
}

message select_magic {
    required uint32     _magic_id = 1;  // 魔法ID
}


// ===================================================================
// 队伍请求
// ===================================================================
message team_req {
    optional team_invite    _invite     = 1;  // 组队邀请
    optional team_accept    _accept     = 2;  // 接受邀请
    optional team_refuse    _refuse     = 3;  // 拒绝邀请
    optional team_state     _state      = 4;  // 状态修改
    optional team_leave     _leave      = 5;  // 离开队伍
}

message team_invite {
    required uint32     _role_id        = 1;   // 角色ID
}

message team_accept {}

message team_refuse {}

message team_state {
    required team_member_state  _state  = 1;  // 状态ID
}

message team_leave {}

// ===================================================================
// 匹配请求
// ===================================================================
message match_req {
    optional start_match    _start  = 1;  // 开始匹配
    optional cancel_match   _cancel = 2;  // 取消匹配
}

message start_match {}

message cancel_match {}


